--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
 		<img src="./assets/bank-of-commerce.jpg" alt="Canadian Bank of Commerce" />
 		<img src="./assets/big-bird_michelle-obama.jpeg" alt="Big bird and Michelle Obama" />
 		<img src="./assets/dl.svg" alt="Download" />
-		<img src="./assets/keaton.gif" alt="Buster Keaton">
+		<!-- <img src="./assets/keaton.gif" alt="Buster Keaton"> -->
+		<video muted autoplay name='media' loop>
+			<source
+			  src='./assets/keaton.gif'
+			  type='video/mp4'>
+		  </video>
 		<img src="./assets/Neighborhood_Ahead.png" alt="Neighbourhood ahead sign" />
 		<img src="./assets/race.jpg" alt="Race" />
 	</div>
