--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<!-- <img src="./assets/keaton.gif" alt="Buster Keaton"> -->
 		<video muted autoplay name='media' loop>
 			<source
-			  src='./assets/keaton.gif'
+			  src='./assets/keaton.mp4'
 			  type='video/mp4'>
 		  </video>
 		<img src="./assets/Neighborhood_Ahead.png" alt="Neighbourhood ahead sign" />
